how2recover_from_com_proxy_crash
C:\Users\young\dev\pythoncode\automate_outlook (master -> origin)
(venv) λ python ez_quick_read_emails_inbox.py
Traceback (most recent call last):
  File "ez_quick_read_emails_inbox.py", line 7, in <module>
    inbox = outlook.GetDefaultFolder(win32com.client.constants.olFolderInbox)
  File "C:\Users\young\dev\pythoncode\automate_outlook\venv\lib\site-packages\win32com\client\__init__.py", line 178, in __getattr__
    raise AttributeError(a)
AttributeError: olFolderInbox

C:\Users\young\dev\pythoncode\automate_outlook (master -> origin)
(venv) λ python
Python 3.6.5 (v3.6.5:f59c0932b4, Mar 28 2018, 17:00:18) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> gtom win32com.client import makepy
  File "<stdin>", line 1
    gtom win32com.client import makepy
                ^
SyntaxError: invalid syntax
>>> from win32com.client import makepy
>>> makepy.main()
Generating to C:\Users\young\AppData\Local\Temp\gen_py\3.6\00062FFF-0000-0000-C000-000000000046x0x9x6.py
Building definitions from type library...
Generating...
Importing module
>>> exit()

C:\Users\young\dev\pythoncode\automate_outlook (master -> origin)
(venv) λ python ez_quick_read_emails_inbox.py
----------------------------------------------------------------------
.Sender Name: Chris Haworth (Sales Americas)
.Sender email: sales.us@jetbrains.com

.RE: [JetBrains] Re: RE: not able to activate - RE: JetBrains: Important Links and Information for Your Recent Purchase
Body: ... ##- Please type your reply above this line -## Your request (1774782) has been updated. To add additional comments, r